syntax = "proto3";

package user.v1;

enum UserRole {
    USER_ROLE_UNSPECIFIED = 0;
    USER_ROLE_ADMIN = 1;
    USER_ROLE_BOOKKEEPER = 2;
    USER_ROLE_MANAGER = 3;
    USER_ROLE_WORKER = 4;
}

message User {
    string username = 1;
    string first_name = 2;
    string last_name = 3;
    UserRole role = 4;
    string email = 5;
}

message UserWithID {
    string id = 1; // uuid
    User user = 2;
}
