syntax = "proto3";

package users.v1;

import "user/v1/user.proto";

service UsersService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
}

message CreateUserRequest {
    user.v1.User user = 1;
    string password = 2;
    string repeat_password = 3;
}

message CreateUserResponse {
    string id = 1;
}

message UpdateUserRequest {
    user.v1.User user = 1;
}

message UpdateUserResponse {
    string id = 1;
}
